--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
     "name": "startbootstrap-resume",
     "version": "6.0.2",
     "scripts": {
+
+        "watch": "nodemon --ignore public",
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
         "build:assets": "node scripts/build-assets.js",
         "build:pug": "node scripts/build-pug.js",
